--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "elementary-cellular-automata",
-  "version": "0.0.0",
-  "description": "http://dbkaplun.github.io/elementary-cellular-automata",
+  "name": "elementary-cellular-automata",  
+  "version": "1.0.0",
+  "description": "",
+  "homepage": "http://dbkaplun.github.io/elementary-cellular-automata",
+  "repository": "https://github.com/dbkaplun/elementary-cellular-automata",
+  "bugs": "https://github.com/dbkaplun/elementary-cellular-automata/issues",
   "main": "index.html",
-  "private": true,
   "scripts": {
-    "install": "bower install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next",
+    "start": "next start",
+    "build": "npm run clean-build && npm run build-next && npm run build-fonts && npm run build-static",
+    "clean-build": "find out -mindepth 1 -delete",
+    "build-next": "next build && next export",
+    "build-fonts": "find node_modules -regextype posix-egrep -regex '.*\\.(ttf|woff|woff2|eof)' -exec cp {} static/fonts \\;",
+    "build-static": "cp -R static/root/. out",
+    "deploy-gh-pages": "git push origin \"$(git subtree split --prefix out master):gh-pages\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/dbkaplun/elementary-cellular-automata.git"
+  "dependencies": {
+    "bootstrap": "3.3.7",
+    "less": "2.7.2",
+    "less-loader": "4.0.5",
+    "next": "3.0.1-beta.17",
+    "postcss-cssnext": "3.0.2",
+    "postcss-loader": "2.0.6",
+    "raw-loader": "0.5.1",
+    "react": "15.6.1",
+    "react-dom": "15.6.1"
   },
-  "keywords": [
-    "elementary",
-    "cellular",
-    "automata",
-    "rule",
-    "110"
-  ],
   "author": "Dan Kaplun <dbkaplun@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/dbkaplun/elementary-cellular-automata/issues"
-  },
-  "homepage": "https://github.com/dbkaplun/elementary-cellular-automata"
+  "license": "MIT"
 }
